# GeminiPuter

./: .gitignore  README.md
PIO/: platformio.ini
PIO/include/: lv_conf.h
PIO/lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
PIO/lib/ui/src/components/: ui_comp_hook.c
PIO/lib/ui/src/fonts/: ui_font_JB16.c  ui_font_JBEX16.c  ui_font_JBR10.c  ui_font_JBR12.c  ui_font_JBR16.c  ui_font_RR17.c
PIO/lib/ui/src/images/: ui_img_images_battery_indicator_png.c  ui_img_images_battery_main_png.c  ui_img_images_chat_bg_png.c  ui_img_images_loading_bg_png.c  ui_img_images_mask_png.c  ui_img_images_menu_bg_png.c  ui_img_images_status_bg_png.c
PIO/lib/ui/src/screens/: ui_Screen_AiChat.c  ui_Screen_Menu.c  ui_Screen_loading.c  ui_Screen_status.c
PIO/src/: GeminiChat.cpp  GeminiChat.h  WiFiManagerHandler.cpp  WiFiManagerHandler.h  main.cpp
SLS/: GeminiPuter.sll  GeminiPuter.spj
SLS/assets/Fonts/: ui_font_RR13.c  ui_font_RR13.fcfg  ui_font_RR17.fcfg
